[package]
name = "loadem"
version = "0.2.3"
authors = ["Pelle Johnsen <pelle.johnsen@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Command line tool for emulating web load from thousands of clients."
keywords = ["loadtesting", "web", "tool"]
categories = ["command-line-utilities", "development-tools::profiling"]
readme = "README.md"
homepage = "https://github.com/pjoe/loadem"
repository = "https://github.com/pjoe/loadem"
exclude = [
    "/deploy",
    "/.github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
hyper-rustls = "0.21.0"
futures = "0.3.5"
ctrlc = "3.1.5"
clap = "2.33.1"
rustls = "0.18.0"
simple-error = "0.2.1"
