[package]
name = "loadem"
version = "0.2.11"
authors = ["Pelle Johnsen <pelle.johnsen@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Command line tool for emulating web load from thousands of clients."
keywords = ["loadtesting", "web", "tool"]
categories = ["command-line-utilities", "development-tools::profiling"]
readme = "README.md"
homepage = "https://github.com/pjoe/loadem"
repository = "https://github.com/pjoe/loadem"
exclude = ["/deploy", "/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.22"
futures = "0.3"
ctrlc = "3.2.2"
clap = "2.33.1"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
rustls-native-certs = "0.5.0"
simple-error = "0.2.1"
webpki = "0.21.4"
